Add text to about

--- a/src/templates/views/about.hbs
+++ b/src/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This website was created by me. It uses data from mapbox and openweather !!</p>
             <img class="portrait" src="image/user.png"/>
         </div>
         {{>footer}}
